syntax = "proto3";

option csharp_namespace = "ContractManagement.API.Protos";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "Protos/common.proto";

package ContractManagementApi;

service EquipmentTypeGrpc {
	rpc GetEquipmentTypes(RequestFilterGrpc) returns (EquipmentTypePageListGrpcDTO) {}
}

message EquipmentTypePageListGrpcDTO
{
	repeated EquipmentTypeGrpcDTO subset = 1;
	google.protobuf.Int32Value  count = 2;
	google.protobuf.Int32Value  pageCount = 3;
	google.protobuf.Int32Value  totalItemCount = 4;
	google.protobuf.Int32Value  skip = 5;
	google.protobuf.Int32Value  take = 6;
	bool  hasPreviousPage = 7;
	bool  hasNextPage = 8;
	bool  isFirstPage = 9;
	bool  isLastPage = 10;
}

message EquipmentTypeGrpcDTO
{
	google.protobuf.Int32Value	 id = 1;
	google.protobuf.StringValue  code = 2;
	google.protobuf.StringValue  name = 3;
	google.protobuf.StringValue  unitOfMeasurement = 4;
	google.protobuf.Int32Value  unitOfMeasurementId = 5;
	google.protobuf.StringValue  manufacturer = 6;
	google.protobuf.StringValue  description = 7;
	google.protobuf.StringValue  specifications = 8;
	Money  price = 9;

}